<resources>
    <string name="app_name">Lumi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="masuk">Masuk</string>
    <string name="password">Password</string>
    <string name="hide_password">Sembunyikan Password</string>
    <string name="show_password">Tampilkan Password</string>


    <string name="email">Email</string>
    <string name="sudah_punya_rekening">Sudah Punya Rekening?</string>
    <string name="belum_punya_rekening">Belum Punya Rekening</string>
    <string name="selamat_datang">Selamat Datang!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="atur_pin">Atur PIN</string>
    <string name="masukkan_6_digit_pin">Masukkan 6 digit PIN</string>
    <string name="pin">PIN</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="konfirmasi_pin">Konfirmasi PIN</string>
    <string name="konfirmasi_6_digit_pin">Konfirmasi 6 digit PIN</string>
    <string name="anda_berhasil_membuka_rekening">Anda berhasil membuka rekening</string>

    <string name="tombol_kembali">tombol kembali</string>
    <string name="tombol_lanjut">Tombol lanjut</string>
    <string name="no_hp">No HP</string>
    <string name="input_nomor_hp">input nomor hp</string>
    <string name="input_email">input email</string>

    <string name="tombol_sudah_punya_rekening">tombol sudah punya rekening</string>
    <string name="tombol_belum_punya_rekening">tombol belum punya rekening</string>
    <string name="teks_selamat_datang">Teks Selamat datang</string>
    <string name="input_password">Input password</string>
    <string name="tombol_masuk">tombol masuk</string>
    <string name="logo_dari_lumi">logo dari lumi</string>

    <string name="verifikasi_e_ktp">Verifikasi e-KTP</string>
    <string name="verif_description"><![CDATA[Pastikan e-KTP dalam area terang & data terbaca dengan jelas]]></string>
    <string name="lanjut">Lanjut</string>
    <string name="ambil_foto_e_ktp">Ambil Foto e-KTP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="ektp_image">Gambar E-KTP</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="biodata">Biodata</string>
    <string name="calendar_format">dd/mm/yyyy</string>
    <string name="tombol_kirim">Tombol Kirim</string>
    <string name="tombol_upload_ktp">Tombol Upload KTP</string>
    <string name="silahkan_upload_dan_kirim_e_ktp_anda">Silahkan upload dan kirim E-KTP Anda!</string>
    <string name="teks_silahkan_upload_dan_kirim_e_ktp_anda">Teks Silahkan Upload dan Kirim E KTP Anda</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="kembali">Kembali</string>
    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="masukkan_tanggal_lahir">Masukkan tanggal lahir</string>

    <string name="papan_tombol">Papan Tombol</string>
    <string name="back">back</string>
    <string name="foto_ktp">Foto KTP</string>
    <string name="border_ktp">Border KTP</string>
    <string name="capture_image">Capture Image</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="verifikasi_fingerprint">Verifikasi Fingerprint</string>
    <string name="check_biometric_finger">Check Biometric Finger</string>
    <string name="sentuh_sensor_fingerprint">Sentuh Sensor Fingerprint</string>
    <string name="jangan_tutup_aplikasi">Jangan tutup Aplikasi,</string>
    <string name="e_ktp_sedang_di_verifikasi">e-KTP sedang di verifikasi</string>
    <string name="verifikasi_ktp">Verifikasi KTP</string>
    <string name="buat_password">Buat Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
</resources>