<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    tools:context="com.synrgy7team4.feature_auth.presentation.register.CreatePassword">

        <TextView
            android:id="@+id/createPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buat_password"
            android:textColor="@color/primary_blue"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="213dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/material_dynamic_neutral50"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/createPasswordText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_dynamic_neutral90"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordConfirmationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/material_dynamic_neutral50"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/passwordLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/material_dynamic_neutral90"
                android:hint="@string/konfirmasi_password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitCreatedPassword"
            android:layout_margin="70dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            style="@style/PrimaryActiveButton"
            android:text="@string/lanjut"
            android:contentDescription="@string/tombol_lanjut"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>