<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.register.FotoKtpFragment">
    <androidx.camera.view.PreviewView
        android:id="@+id/previewView"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/back"
        android:id="@+id/btn_back"
        android:background="@drawable/circular_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="30dp"
        android:contentDescription="@string/back"
        android:background="@drawable/baseline_arrow_back_ios_new_24"
        android:clickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/foto_ktp"
        android:fontFamily="@font/calibri"
        android:textSize="24sp"
        android:textFontWeight="950"
        android:textColor="@color/primary_darkBlue"
        app:layout_constraintStart_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"/>

    <ImageView
        android:layout_width="380dp"
        android:layout_height="250dp"
        android:contentDescription="@string/border_ktp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:contentDescription="@string/border_ktp"
        android:layout_marginBottom="150dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:contentDescription="@string/border_ktp"
        android:layout_marginStart="225dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/primary_darkBlue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewView">
        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/capture_image"
            android:id="@+id/btn_capture"
            android:layout_marginBottom="15dp"
            android:background="@drawable/camera_take"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/flip_camera"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/btn_flip_camera"
            android:background="@drawable/flip_camera_ios"
            android:layout_gravity="center|end"/>
    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>